炫彩编程助手/Data/DemoMgr/VS/Lib/xcgui.h


//对象类型决定功能
//对象样式决定外观

/// @defgroup groupObjectType 接口句柄类型
/// @ingroup macroDefine
/// @{
/// 炫彩对象类型
enum XC_OBJECT_TYPE  ///<炫彩对象类型
{
	XC_ERROR = -1,   ///<错误类型
	XC_NOTHING = 0,
	XC_WINDOW = 1,    ///<窗口
	XC_MODALWINDOW = 2,    ///<模态窗口
	XC_FRAMEWND = 3,    ///<框架窗口
	XC_FLOATWND = 4,    ///<浮动窗口
	XC_COMBOBOXWINDOW = 11,   //comboBoxWindow_        组合框弹出下拉列表窗口
	XC_POPUPMENUWINDOW = 12,  //popupMenuWindow_       弹出菜单主窗口
	XC_POPUPMENUCHILDWINDOW = 13,   //popupMenuChildWindow_  弹出菜单子窗口
	XC_OBJECT_UI = 19,   ///<...
	XC_WIDGET_UI = 20,
	//元素
	XC_ELE = 21,   ///<基础元素
	XC_ELE_LAYOUT = 53,   ///<布局元素
	XC_BUTTON = 22,   ///<按钮
	XC_RICHEDIT = 23,   ///<富文本编辑框
	XC_COMBOBOX = 24,   ///<下拉组合框元素
	XC_SCROLLBAR = 25,   ///<滚动条元素
	XC_SCROLLVIEW = 26,   ///<滚动视图元素
	XC_LIST = 27,   ///<列表元素
	XC_LISTBOX = 28,   ///<列表框元素
	XC_LISTVIEW = 29,   ///<列表视图,大图标
	XC_TREE = 30,   ///<树元素
	XC_MENUBAR = 31,   ///<菜单条
	XC_SLIDERBAR = 32,   ///<滑动条
	XC_PROGRESSBAR = 33,   ///<进度条
	XC_TOOLBAR = 34,   ///<工具条
	XC_MONTHCAL = 35,   ///<月历元素
	XC_DATETIME = 36,   ///<时间元素
	XC_PROPERTYGRID = 37,   ///<属性网格
	XC_RICHEDIT_COLOR = 38,   ///<颜色选择元素
	XC_RICHEDIT_SET = 39,   ///<...
	XC_TABBAR = 40,   ///<tab条
	XC_TEXTLINK = 41,   ///<文本链接按钮

	XC_PANE = 42,   ///<布局窗格
	XC_PANE_SPLIT = 43,   ///<布局窗格拖动分割条
	XC_MENUBAR_BUTTON = 44,   ///<菜单条上的按钮
							  //	XC_TOOLBAR_BUTTON       =45,   ///<工具条上按钮
							  //	XC_PROPERTYPAGE_LABEL   =46,   ///<属性页标签按钮
							  //	XC_PIER                 =47,   ///<窗格停靠码头
							  //	XC_BUTTON_MENU          =48,   ///<弹出菜单按钮
							  //	XC_VIRTUAL_ELE          =49,   ///<虚拟元素
							  XC_RICHEDIT_FILE = 50,   ///<RichEditFile 文件选择编辑框
							  XC_RICHEDIT_FOLDER = 51,   ///<RichEditFolder  文件夹选择编辑框
							  XC_LIST_HEADER = 52,   ///<列表头元素

							  XC_SHAPE = 61,    ///<形状对象
							  XC_SHAPE_TEXT = 62,    ///<形状对象-文本
							  XC_SHAPE_PICTURE = 63,    ///<形状对象-图片
							  XC_SHAPE_RECT = 64,    ///<形状对象-矩形
							  XC_SHAPE_ELLIPSE = 65,    ///<形状对象-圆
							  XC_SHAPE_LINE = 66,    ///<形状对象-直线
							  XC_SHAPE_GROUPBOX = 67,    ///<形状对象-组框
							  XC_SHAPE_GIF = 68,    ///<形状对象-GIF

													//其他类型
													XC_MENU = 81,   ///<弹出菜单
													XC_IMAGE = 82,         ///<图片
													XC_IMAGE_TEXTURE = XC_IMAGE,   ///<图片纹理,图片源,图片素材
													XC_HDRAW = 83,   ///<绘图操作
													XC_FONT = 84,   ///<炫彩字体
													XC_FLASH = 85,   ///<flash   
													XC_PANE_CELL = 86,   ///<...
													XC_WEB = 87,   ///<...
													XC_IMAGE_FRAME = 88,   ///<图片帧,指定图片的渲染属性

													XC_LAYOUT_OBJECT = 101,   ///<布局对象LayoutObject
													XC_ADAPTER = 102,   ///<...
													XC_ADAPTER_TABLE = 103,   ///<数据适配器AdapterTable
													XC_ADAPTER_TREE = 104,   ///<数据适配器AdapterTree
													XC_ADAPTER_LISTVIEW = 105,   ///<数据适配器AdapterListView
													XC_ADAPTER_MAP = 106,   ///<数据适配器AdapterMap

													XC_BKINFOM = 116, //背景管理器

																	  //无实体对象,只是用来判断布局
																	  XC_LAYOUT_LISTVIEW = 111,
																	  XC_LAYOUT_LIST = 112,
																	  XC_LAYOUT_OBJECT_GROUP = 113,
																	  XC_LAYOUT_OBJECT_ITEM = 114,
																	  XC_LAYOUT_PANEL = 115,

																	  //无实体对象,只是用来判断类型
																	  XC_LIST_ITEM = 121,     //列表项模板 list_item
																	  XC_LISTVIEW_GROUP = 122,
																	  XC_LISTVIEW_ITEM = 123,
																	  //XC_BUTTON_EX,
};


///@}


/// @defgroup groupObjectTypeEx   对象扩展类型
/// @ingroup macroDefine
/// @{
enum XC_OBJECT_TYPE_EX
{
	xc_ex_error = -1,   ///<错误类型
	button_type_default = 0, ///<默认类型
	button_type_radio,     ///<单选按钮
	button_type_check,     ///<复选按钮
	button_type_close,     ///<窗口关闭按钮
	button_type_min,       ///<窗口最小化按钮
	button_type_max,       ///<窗口最大化还原按钮

	element_type_layout,   ///<布局元素,启用布局功能的元素
};


///@}


/// @defgroup groupObjectStyle 对象样式(用于区分外观)
/// @ingroup macroDefine
/// @{
enum  XC_OBJECT_STYLE
{
	xc_style_default = 0,
	button_style_default = xc_style_default,  ///<默认风格
	button_style_check = 1,    ///<复选按钮
	button_style_radio = 2,    ///<单选按钮
	button_style_expand = 3,    ///<展开收缩按钮
	button_style_scrollbar_left = 4,    ///<水平滚动条,左按钮
	button_style_scrollbar_right = 5,    ///<水平滚动条,右按钮
	button_style_scrollbar_up = 6,    ///<垂直滚动条,上按钮
	button_style_scrollbar_down = 7,    ///<垂直滚动条,下按钮
	button_style_scrollbar_slider_h = 8,    ///<水平滚动条,滑块
	button_style_scrollbar_slider_v = 9,    ///<垂直滚动条,滑块
	button_style_tabBar_button = 10,   ///<TabBar上的标签按钮
	button_style_toolBar_left = 11,   ///<ToolBar左滚动按钮
	button_style_toolBar_right = 12,   ///<ToolBar右滚动按钮

	button_style_pane_close = 13,   ///<窗格关闭按钮
	button_style_pane_lock = 14,   ///<窗格锁定按钮
	button_style_pane_menu = 15,   ///<窗格下拉菜单按钮
	button_style_pane_dockH = 16,   ///<框架窗口左边或右边码头上按钮
	button_style_pane_dockV = 17,   ///<框架窗口上边或下边码头上按钮

	xc_style_frameWnd_dock_left = 18,   ///<框架窗口停靠码头
	xc_style_frameWnd_dock_top = 19,   ///<框架窗口停靠码头
	xc_style_frameWnd_dock_right = 20,   ///<框架窗口停靠码头
	xc_style_frameWnd_dock_bottom = 21,   ///<框架窗口停靠码头

	xc_style_ToolBar_separator = 22,   ///<工具条上的分割线
	xc_style_listBox_comboBox = 23,   ///<下拉组合框弹出的listBox

									  //xc_style_richEdit_onlyRead      =23,   ///<编辑框只读模式
};

/// @defgroup groupHandle 句柄列表
/// @ingroup macroDefine
/// @{
typedef void*   HXCGUI;       ///<资源句柄


///@}


//状态--------------------------------------
/// @defgroup groupCommonState3 普通三种状态
/// @ingroup  macroDefine
/// @{
enum  common_state3_
{
	common_state3_leave = 0,  ///<离开
	common_state3_stay,     ///<停留
	common_state3_down,     ///<按下
};


///@}

/// @defgroup groupButtonStateFlag 按钮状态
/// @ingroup  macroDefine
/// @{
enum  button_state_
{
	button_state_leave = 0,   ///<离开状态
	button_state_stay,      ///<停留状态
	button_state_down,      ///<按下状态
	button_state_check,     ///<选中状态
	button_state_disable,   ///<禁用状态
};


///@}


//按钮图标对齐方式
/// @defgroup groupButtonIconAlign 按钮图标对齐方式
/// @ingroup macroDefine
/// @{
enum  button_icon_align_
{
	button_icon_align_left = 0,  ///<图标在左边
	button_icon_align_top,     ///<图标在顶部
	button_icon_align_right,   ///<图标在右边
	button_icon_align_bottom,  ///<图标在底部
};
XC_API void  WINAPI XC_AddFileSearchPath(const wchar_t* pPath);

XC_API void  WINAPI XC_InitFont(LOGFONTW *pFont, wchar_t *pName, int size, BOOL bBold = FALSE, BOOL bItalic = FALSE, BOOL bUnderline = FALSE, BOOL bStrikeOut = FALSE);

XC_API  void* WINAPI XC_Malloc(int size);

XC_API  void  WINAPI XC_Free(void *p);

XC_API void WINAPI _XC_SetType(HXCGUI hXCGUI, XC_OBJECT_TYPE nType);

XC_API void WINAPI _XC_AddType(HXCGUI hXCGUI, XC_OBJECT_TYPE nType);

XC_API void WINAPI _XC_BindData(HXCGUI hXCGUI, int data);

XC_API int  WINAPI _XC_GetBindData(HXCGUI hXCGUI);

XC_API void WINAPI  XC_Alert(const wchar_t* pText, const wchar_t* pTitle);

XC_API void* WINAPI XC_Sys_ShellExecute(HWND hwnd, const wchar_t* lpOperation, const wchar_t* lpFile, const wchar_t* lpParameters, const wchar_t* lpDirectory, int nShowCmd);

XC_API BOOL WINAPI XInitXCGUI(wchar_t *pText = NULL);

XC_API void WINAPI XRunXCGUI();

XC_API void WINAPI XExitXCGUI();

XC_API void WINAPI XC_PostQuitMessage(int nExitCode);

XC_API void              WINAPI XUI_SetStyle(HXCGUI hXCGUI, XC_OBJECT_STYLE nStyle);

XC_API XC_OBJECT_STYLE   WINAPI XUI_GetStyle(HXCGUI hXCGUI);

XC_API HBKM WINAPI XBkM_Create();

XC_API void WINAPI XBkM_Destroy(HBKM hBkInfoM);

XC_API int  WINAPI XBkM_SetBkInfo(HBKM hBkInfoM, const wchar_t *pText);

XC_API int  WINAPI XBkM_AddInfo(HBKM hBkInfoM, const wchar_t *pText);

XC_API void WINAPI XBkM_AddBorder(HBKM hBkInfoM, int nState, COLORREF color, BYTE alpha, int width);

XC_API void WINAPI XBkM_AddFill(HBKM hBkInfoM, int nState, COLORREF color, BYTE alpha);

XC_API void WINAPI XBkM_AddImage(HBKM hBkInfoM, int nState, HIMAGE hImage);

XC_API int  WINAPI XBkM_GetCount(HBKM hBkInfoM);

XC_API void WINAPI XBkM_Clear(HBKM hBkInfoM);

XC_API BOOL WINAPI XBkM_Draw(HBKM hBkInfoM, int nState, HDRAW hDraw, RECT* pRect);

XC_API BOOL WINAPI XBkM_DrawEx(HBKM hBkInfoM, int nState, HDRAW hDraw, RECT* pRect, int nStateEx);

XC_API HELE WINAPI XBtn_Create(int x, int y, int cx, int cy, const wchar_t *pName, HXCGUI hParent = NULL);

XC_API BOOL WINAPI XBtn_IsCheck(HELE hEle); //按钮是否被选中
XC_API BOOL WINAPI XBtn_SetCheck(HELE hEle, BOOL bCheck);

XC_API void WINAPI XBtn_SetState(HELE hEle, common_state3_ nState);

XC_API common_state3_  WINAPI XBtn_GetState(HELE hEle);

XC_API button_state_   WINAPI XBtn_GetStateEx(HELE hEle);

XC_API void WINAPI XBtn_SetStyle(HELE hEle, XC_OBJECT_STYLE  nStyle);

XC_API XC_OBJECT_STYLE  WINAPI XBtn_GetStyle(HELE hEle);

XC_API void WINAPI XBtn_SetType(HELE hEle, XC_OBJECT_TYPE_EX nType);

XC_API void WINAPI XBtn_SetTypeEx(HELE hEle, XC_OBJECT_TYPE_EX nType);

XC_API XC_OBJECT_TYPE_EX  WINAPI XBtn_GetType(HELE hEle);

XC_API void WINAPI XBtn_SetGroupID(HELE hEle, int nID);

XC_API int  WINAPI XBtn_GetGroupID(HELE hEle);

XC_API void WINAPI XBtn_SetBindEle(HELE hEle, HELE hBindEle);

XC_API HELE WINAPI XBtn_GetBindEle(HELE hEle);

XC_API void WINAPI XBtn_SetTextAlign(HELE hEle, int nFlags);

XC_API int  WINAPI XBtn_GetTextAlign(HELE hEle);

XC_API void WINAPI XBtn_SetIconAlign(HELE hEle, button_icon_align_ align);

XC_API void WINAPI XBtn_SetOffset(HELE hEle, int x, int y);

XC_API void WINAPI XBtn_SetOffsetIcon(HELE hEle, int x, int y);

XC_API void WINAPI XBtn_SetIconSpace(HELE hEle, int size);

XC_API void WINAPI XBtn_GetText(HELE hEle, out_ wchar_t *pOut, int nOutLen);

XC_API void WINAPI XBtn_SetText(HELE hEle, in_ const wchar_t *pName);

XC_API void WINAPI XBtn_SetIcon(HELE hEle, HIMAGE hImage);

XC_API void WINAPI XBtn_SetIconDisable(HELE hEle, HIMAGE hImage);

XC_API HIMAGE WINAPI XBtn_GetIcon(HELE hEle, int nType);

XC_API void WINAPI XBtn_AddAnimationFrame(HELE hEle, HIMAGE hImage, UINT uElapse);

XC_API void WINAPI XBtn_EnableAnimation(HELE hEle, BOOL bEnable, BOOL bLoopPlay = FALSE);