炫彩编程助手/Data/DemoMgr/net/Lib/XCGUI.cs


		[DllImport("xcgui.dll", EntryPoint = "XC_AddFileSearchPath", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XC_AddFileSearchPath (string pPath);

		[DllImport("xcgui.dll", EntryPoint = "XC_InitFont", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XC_InitFont (LOGFONTW* pFont,string pName,int size,bool bBold,bool bItalic,bool bUnderline,bool bStrikeOut);

		[DllImport("xcgui.dll", EntryPoint = "XC_Malloc", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XC_Malloc (int size);

		[DllImport("xcgui.dll", EntryPoint = "XC_Free", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XC_Free (int p);

		[DllImport("xcgui.dll", EntryPoint = "_XC_SetType", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void _XC_SetType (int hXCGUI,int nType);

		[DllImport("xcgui.dll", EntryPoint = "_XC_AddType", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void _XC_AddType (int hXCGUI,int nType);

		[DllImport("xcgui.dll", EntryPoint = "_XC_BindData", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void _XC_BindData (int hXCGUI,int data);

		[DllImport("xcgui.dll", EntryPoint = "_XC_GetBindData", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int _XC_GetBindData (int hXCGUI);

		[DllImport("xcgui.dll", EntryPoint = "XC_Alert", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XC_Alert (string pText,string pTitle);

		[DllImport("xcgui.dll", EntryPoint = "XC_Sys_ShellExecute", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XC_Sys_ShellExecute (int hwnd,string lpOperation,string lpFile,string lpParameters,string lpDirectory,int nShowCmd);

		[DllImport("xcgui.dll", EntryPoint = "XInitXCGUI", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XInitXCGUI (string pText);

		[DllImport("xcgui.dll", EntryPoint = "XRunXCGUI", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XRunXCGUI ();

		[DllImport("xcgui.dll", EntryPoint = "XExitXCGUI", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XExitXCGUI ();

		[DllImport("xcgui.dll", EntryPoint = "XC_PostQuitMessage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XC_PostQuitMessage (int nExitCode);

		[DllImport("xcgui.dll", EntryPoint = "XUI_GetType", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XUI_GetType (int hXCGUI);

		[DllImport("xcgui.dll", EntryPoint = "XUI_GetTypeEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XUI_GetTypeEx (int hXCGUI);

		[DllImport("xcgui.dll", EntryPoint = "XUI_SetStyle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XUI_SetStyle (int hXCGUI,int nStyle);

		[DllImport("xcgui.dll", EntryPoint = "XUI_GetStyle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XUI_GetStyle (int hXCGUI);

		[DllImport("xcgui.dll", EntryPoint = "XBkM_Create", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XBkM_Create ();

		[DllImport("xcgui.dll", EntryPoint = "XBkM_Destroy", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XBkM_Destroy (int hBkInfoM);

		[DllImport("xcgui.dll", EntryPoint = "XBkM_SetBkInfo", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XBkM_SetBkInfo (int hBkInfoM,string pText);

		[DllImport("xcgui.dll", EntryPoint = "XBkM_AddInfo", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XBkM_AddInfo (int hBkInfoM,string pText);

		[DllImport("xcgui.dll", EntryPoint = "XBkM_AddBorder", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XBkM_AddBorder (int hBkInfoM,int nState,int color,byte alpha,int width);

		[DllImport("xcgui.dll", EntryPoint = "XBkM_AddFill", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XBkM_AddFill (int hBkInfoM,int nState,int color,byte alpha);

		[DllImport("xcgui.dll", EntryPoint = "XBkM_AddImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XBkM_AddImage (int hBkInfoM,int nState,int hImage);

		[DllImport("xcgui.dll", EntryPoint = "XBkM_GetCount", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XBkM_GetCount (int hBkInfoM);

		[DllImport("xcgui.dll", EntryPoint = "XBkM_Clear", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XBkM_Clear (int hBkInfoM);

		[DllImport("xcgui.dll", EntryPoint = "XBkM_Draw", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XBkM_Draw (int hBkInfoM,int nState,int hDraw,RECT pRect);

		[DllImport("xcgui.dll", EntryPoint = "XBkM_DrawEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XBkM_DrawEx (int hBkInfoM,int nState,int hDraw,RECT pRect,int nStateFilter);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_Create", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XBtn_Create (int x,int y,int cx,int cy,string pName,int hParent);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_IsCheck", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XBtn_IsCheck (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_SetCheck", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XBtn_SetCheck (int hEle,bool bCheck);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_SetState", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XBtn_SetState (int hEle,int nState);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_GetState", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XBtn_GetState (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_GetStateEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XBtn_GetStateEx (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_SetStyle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XBtn_SetStyle (int hEle,int nStyle);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_GetStyle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XBtn_GetStyle (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_SetType", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XBtn_SetType (int hEle,int nType);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_SetTypeEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XBtn_SetTypeEx (int hEle,int nType);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_GetType", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XBtn_GetType (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_SetGroupID", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XBtn_SetGroupID (int hEle,int nID);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_GetGroupID", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XBtn_GetGroupID (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_SetBindEle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XBtn_SetBindEle (int hEle,int hBindEle);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_GetBindEle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XBtn_GetBindEle (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_SetTextAlign", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XBtn_SetTextAlign (int hEle,int nFlags);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_GetTextAlign", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XBtn_GetTextAlign (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_SetIconAlign", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XBtn_SetIconAlign (int hEle,int align);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_SetOffset", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XBtn_SetOffset (int hEle,int x,int y);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_SetOffsetIcon", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XBtn_SetOffsetIcon (int hEle,int x,int y);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_SetIconSpace", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XBtn_SetIconSpace (int hEle,int size);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_GetText", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XBtn_GetText (int hEle,string pOut,int nOutLen);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_SetText", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XBtn_SetText (int hEle,string pName);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_SetIcon", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XBtn_SetIcon (int hEle,int hImage);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_SetIconDisable", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XBtn_SetIconDisable (int hEle,int hImage);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_GetIcon", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XBtn_GetIcon (int hEle,int nType);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_AddAnimationFrame", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XBtn_AddAnimationFrame (int hEle,int hImage,int uElapse);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_EnableAnimation", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XBtn_EnableAnimation (int hEle,bool bEnable,bool bLoopPlay);
